# spellbook

./: .gitignore  Cargo.toml  Makefile  PERFORMANCE_TUNING.md  README.md  bench.sh  release.sh
src/: checks.rs  completions.rs  config.rs  daemon.rs  default_config.yaml  main.rs  serve.rs
