[package]
name = "spellbook"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
which = "6.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
clap_complete = "4.5.47"
nix = { version = "0.29.0", features = ["process", "signal", "socket", "uio"] }
